Fix text overflowing on long words (#188)
* Break words when overflowing

* Format and add tests

--- a/src/app/(space)/globals.css
+++ b/src/app/(space)/globals.css
@@ -201,6 +201,16 @@
     .triangle:after {
         transform: rotate(135deg) skewY(-45deg) scale(0.707, 1.414) translate(50%);
     }
+
+    .break-anywhere {
+        word-break: break-word;
+    }
+    @supports (overflow-wrap: anywhere) {
+        .break-anywhere {
+            word-break: break-word;
+            overflow-wrap: anywhere;
+        }
+    }
 }
 
 html {
